# stacks

./: CMakeLists.txt
apps/stacks/src/stacksolve/: stack_state.hpp
apps/stacks/util/doctest/: CMakeLists.txt
src/: Board.cpp
util/nix/: shell.nix
